[package]
name = "grss"
version = "0.1.0"
authors = ["^PalaHacker^ <palahacker@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.10.4" , features = ["blocking"] }
error-chain = "*"
futures = "0.3.4"
http = "*"
tokio = { version = "0.2", features = ["full"] }
